# django-cookiecutter

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.project_slug }}/: .env.example  .gitignore  apps.py  pyproject.toml  requirements.txt  tailwind.config.js
{{ cookiecutter.project_slug }}/db/: models.py
{{ cookiecutter.project_slug }}/landing/: models.py  urls.py  views.py
{{ cookiecutter.project_slug }}/templates/landing/: index.html
{{ cookiecutter.project_slug }}/templates/landing/partials/: footer.html  nav.html  team.html
{{ cookiecutter.project_slug }}/templates/partials/: anonymous_base.html  anonymous_htmx.html  base.html
{{ cookiecutter.project_slug }}/users/: admin.py  backends.py  conftest.py  models.py  tests.py  urls.py  views.py
{{ cookiecutter.project_slug }}/users/migrations/: 0001_initial.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: requirements.txt  settings.py  test_settings.py  urls.py
